# data-parallel-CPP

./: CMakeLists.txt  Contributing.md  README.md  book_errata.txt  dpcpp_toolchain.cmake  second_edition_errata.txt
samples/: CMakeLists.txt
samples/Ch01_intro/: CMakeLists.txt  fig_1_1_hello.cpp  fig_1_2.hpp  fig_1_3_race.cpp  fig_1_4_lambda.cpp  fig_1_6_functor.cpp  figure_1_2.hpp
samples/Ch01_introduction/: fig_1_1_hello.cpp  fig_1_3_race.cpp  fig_1_4_lambda.cpp  fig_1_6_functor.cpp
samples/Ch02_where_code_runs/: #fig_2_13_gpu_plus_fpga.cpp#  #fig_2_13_gpu_plus_fpga.cpp#~  CMakeLists.txt  fig_2_10_cpu_selector.cpp  fig_2_10_gpu_selector.cpp  fig_2_12_multiple_selectors.cpp  fig_2_13_gpu_plus_fpga.cpp  fig_2_15_aspect_selector.cpp  fig_2_15_custom_selector.cpp  fig_2_16_custom_selector.cpp  fig_2_18_simple_device_code.cpp  fig_2_19.hpp  fig_2_20.hpp  fig_2_22_simple_device_code_2.cpp  fig_2_23_fallback.cpp  fig_2_23_host_task.cpp  fig_2_2_simple_program.cpp  fig_2_3.hpp  fig_2_4.hpp  fig_2_7_implicit_default_selector.cpp  fig_2_9_cpu_selector.cpp  fig_2_9_host_selector.cpp  figure_2_19.hpp  figure_2_20.hpp  figure_2_3.hpp  figure_2_4.hpp
samples/Ch03_data_management/: CMakeLists.txt  fig_3_10_in_order.cpp  fig_3_11_depends_on.cpp  fig_3_13_read_after_write.cpp  fig_3_15_write_after_read_and_write_after_write.cpp  fig_3_17.hpp  fig_3_18.hpp  fig_3_4_usm_explicit_data_movement.cpp  fig_3_5_usm_implicit_data_movement.cpp  fig_3_6_buffers_and_accessors.cpp  figure_3_17.hpp  figure_3_18.hpp
samples/Ch04_expressing_parallelism/: CMakeLists.txt  fig_4_10.hpp  fig_4_11.hpp  fig_4_13_nd_range_matrix_multiply.cpp  fig_4_15_nd_range_matrix_multiply.cpp  fig_4_17.hpp  fig_4_18.hpp  fig_4_19.hpp  fig_4_2.hpp  fig_4_20.hpp  fig_4_20_hierarchical_matrix_multiply.cpp  fig_4_21.hpp  fig_4_22.hpp  fig_4_22_hierarchical_logical_matrix_multiply.cpp  fig_4_5_vector_add.cpp  fig_4_6_matrix_add.cpp  fig_4_7_basic_matrix_multiply.cpp  fig_4_9.hpp  figure_4_10.hpp  figure_4_11.hpp  figure_4_17.hpp  figure_4_18.hpp  figure_4_19.hpp  figure_4_2.hpp  figure_4_20.hpp  figure_4_21.hpp  figure_4_22.hpp  figure_4_3.hpp  figure_4_9.hpp
samples/Ch05_error_handling/: CMakeLists.txt  fig_5_1_async_task_graph.cpp  fig_5_2_sync_error.cpp  fig_5_3_async_error.cpp  fig_5_4_unhandled_exception.cpp  fig_5_5_terminate.cpp  fig_5_6_catch_snip.cpp  fig_5_7_catch.cpp  fig_5_8_lambda_handler.cpp  fig_5_9_default_handler_proxy.cpp
samples/Ch06_unified_shared_memory/: CMakeLists.txt  fig_6_2.hpp  fig_6_3.hpp  fig_6_4.hpp  fig_6_5_allocation_styles.cpp  fig_6_6_usm_explicit_data_movement.cpp  fig_6_7_usm_implicit_data_movement.cpp  fig_6_8_prefetch_memadvise.cpp  fig_6_9_queries.cpp  figure_6_2.hpp  figure_6_3.hpp  figure_6_4.hpp
samples/Ch07_buffers/: CMakeLists.txt  fig_7_1.hpp  fig_7_10_accessors.cpp  fig_7_2_3_4_creating_buffers.cpp  fig_7_5_buffer_properties.cpp  fig_7_8_accessors_simple.cpp
samples/Ch08_graph_scheduling/: CMakeLists.txt  fig_8_3_linear_dependence_in_order.cpp  fig_8_4_linear_dependence_events.cpp  fig_8_5_linear_dependence_buffers.cpp  fig_8_6_y_in_order.cpp  fig_8_7_y_events.cpp  fig_8_8_y_buffers.cpp
samples/Ch08_scheduling_kernels_and_data_movement/: fig_8_4_linear_dependence_events.cpp  fig_8_5_linear_dependence_buffers.cpp  fig_8_6_y_in_order.cpp  fig_8_7_y_events.cpp  fig_8_8_y_buffers.cpp
samples/Ch09_communication_and_sychronization/: fig_9_7_local_accessors.cpp  matmul_harness.cpp
samples/Ch09_work_item_communication/: CMakeLists.txt  fig_9_10_hier_tiled_matmul.cpp  fig_9_11_matmul_broadcast.cpp  fig_9_11_sub_group_barrier.cpp  fig_9_12_ndrange_sub_group_matmul.cpp  fig_9_13_matmul_broadcast.cpp  fig_9_14_ndrange_sub_group_matmul.cpp  fig_9_14_ndrange_sub_group_matrix_multiplication.cpp  fig_9_4_naive_matmul.cpp  fig_9_7_local_accessors.cpp  fig_9_8_ndrange_tiled_matmul.cpp  fig_9_9_local_hier.cpp  fig_9_9_sub_group_barrier.cpp  matmul_harness.cpp
samples/Ch10_defining_kernels/: fig_10_10_kernel_query.cpp  fig_10_3_optional_kernel_lambda_elements.cpp  fig_10_7_optional_kernel_functor_elements.cpp  fig_10_9_use_specific_kernel_bundle.cpp
samples/Ch16_cpus/: CMakeLists.txt  (+13 more)
(+233 files in other folders)
